--- a/survey.html
+++ b/survey.html
@@ -11,36 +11,45 @@
         <a href="index.html">Home</a>
       </ul>
     </li>
+
     <fieldset>
       <form action="submit_survey.html" method="get">
         <h1>Mukbang Survey</h1>
         <h2>This is a website about Mukbangs.</h2>
         <br />
+        <label for="mukbangs">How old are you?</label><br />
+        <input type="number" id="mukbangs" name="age" /><br /><br /><br />
+
         <label for="mukbangs">What is a mukbang?</label>
         <br /><br />
         When people eat large quantities of food.
-        <input
-          type="radio"
-          id="mukbangs"
-          name="mukbangs"
-          value="Survey" /><br />
+        <input type="radio" id="mukbangs1" name="eating" value="Survey" /><br />
         A sport where people eat food while running.
         <input
           type="radio"
-          id="mukbangs"
-          name="mukbangs"
+          id="mukbangs1"
+          name="running"
           value="Survey" /><br />
         pro sleeping.
         <input
           type="radio"
-          id="mukbangs"
-          name="mukbangs"
+          id="mukbangs1"
+          name="pro_sleeping"
           value="Survey" /><br /><br /><br />
 
         <label for="mukbangs">How did it come to fame?</label><br /><br />
-        <input type="text" id="mukbangs" name="mukbangs" /><br /><br />
+        <input type="text" id="mukbangs" name="fame" /><br /><br /><br />
 
-        <input type="submit" value="Survey" />
+        <label for="mukbang">Who is the most popular mukbang YouTuber</label
+        ><br /><br />
+        <input type="text" id="mukbang" name="YouTuber" /><br /><br /><br />
+
+        <img
+          src="images.html/caseoh-eating-v0-2b67u2tzwfwd1.webp"
+          alt="some_one_eating"
+          width="500px" /><br /><br /><br />
+
+        <input type="submit" />
       </form>
     </fieldset>
   </body>
