--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
     <!--
     The nav tag is used to define a navigation section
   -->
-    <nav>
-      <li>
-        <ul>
-          <a href="survey.html">Take the Mukbang Survey</a>
-        </ul>
-      </li>
-    </nav>
-    <!--
+    <header>
+      <nav>
+        <li>
+          <ul>
+            <a href="survey.html">Take the Mukbang Survey</a>
+          </ul>
+        </li>
+      </nav>
+      <!--
       The h1 tag is used for main headings
     -->
-    <h1>History of Mukbangs</h1>
-    <!--
+      <h1>History of Mukbangs</h1>
+      <!--
       The h2 tag is used for subheadings
     -->
-    <h2>This is a website about the history of mukbangs.</h2>
+      <h2>This is a website about the history of mukbangs.</h2>
+    </header>
     <!--
       The br tag stands for brakeline and is used to create a space between
       lines of text
@@ -77,7 +79,9 @@
       <h2>How it rose to fame</h2>
       <p>
         Mukbangs gained popularity through social media influencers like
-        Tzuyang, Hamzy, Nikocado Avocado, Bloveslife, and Trisha Paytas,YouTube,
+        <mark
+          >Tzuyang, Hamzy, Nikocado Avocado, Bloveslife, and Trisha Paytas</mark
+        >, on YouTube,
         <br />
         where creators could reach a global audience. The combination of food,
         entertainment, and interaction made mukbangs a unique form of content
@@ -149,5 +153,10 @@
         </tbody>
       </table>
     </section>
+    <br />
+    <img
+      src="images.html/OFCIB6o9dh8QgFQCzvjdErqbeJWWiVB0NcIaCPm8orp.webp"
+      alt="eating"
+      width="500px" />
   </body>
 </html>
