--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>History of mukbangs - new webpage</title>
+    <title>home - new webpage</title>
   </head>
   <!--
     The body tag is the main content area of an HTML document
@@ -14,11 +14,12 @@
   -->
     <header>
       <nav>
-        <li>
-          <ul>
+        <ul>
+          <li>
             <a href="survey.html">Take the Mukbang Survey</a>
-          </ul>
-        </li>
+            <a href="index.html">Home</a>
+          </li>
+        </ul>
       </nav>
       <!--
       The h1 tag is used for main headings
