--- a/survey.html
+++ b/survey.html
@@ -6,16 +6,13 @@
     <title>survey - new webpage</title>
   </head>
   <body>
-    <!-- You need a nav tag. -->
-    <!-- lis go inside uls -->
-    <!-- Each anchor should be inside a li -->
     <nav>
-      <li>
-        <ul>
+      <ul>
+        <li>
           <a href="index.html">Home</a>
           <a href="survey.html">Survey</a>
-        </ul>
-      </li>
+        </li>
+      </ul>
     </nav>
 
     <!--
@@ -90,5 +87,11 @@
         <input type="submit" />
       </form>
     </fieldset>
+
+    <footer>
+      <p>Created by Omar K. &copy; 2026</p>
+      <p>Contact:</p>
+      <p>Don't!</p>
+    </footer>
   </body>
 </html>
