--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home - new webpage</title>
   </head>
-  <!--
-    The body tag is the main content area of an HTML document
-  -->
   <body>
     <!--
     The nav tag is used to define a navigation section
@@ -16,24 +13,15 @@
       <nav>
         <ul>
           <li>
-            <a href="survey.html">Take the Mukbang Survey</a>
+            <a href="survey.html">Survey</a>
             <a href="index.html">Home</a>
           </li>
         </ul>
       </nav>
-      <!--
-      The h1 tag is used for main headings
-    -->
+
       <h1>History of Mukbangs</h1>
-      <!--
-      The h2 tag is used for subheadings
-    -->
       <h2>This is a website about the history of mukbangs.</h2>
     </header>
-    <!--
-      The br tag stands for brakeline and is used to create a space between
-      lines of text
-    -->
     <br />
     <!--
       The u tag is used to underline text
@@ -42,9 +30,6 @@
       <u>
         <h2>What is a Mukbang?</h2>
       </u>
-      <!--
-      The p tag is used to define a paragraph
-    -->
       <p>
         A mukbang is a video that has someone (usually the host) eating a large
         quantity of food with their audience. And the quantities of food got
@@ -54,10 +39,6 @@
       </p>
     </section>
     <br />
-    <!--
-      The img tag, is a tag that lets developers
-      embed images into their web pages
-    -->
     <img
       src="images.html/images.jpg"
       alt="Mukbang Example"
@@ -103,25 +84,16 @@
       src="https://www.youtube.com/embed/q7JOrGYz8YE?si=ePbAJqpGfaCGCVs8"
       title="mukbang video"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-      gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin"
       allowfullscreen></iframe>
 
     <section>
       <h2>A table of the most popular mukbang YouTubers</h2>
       <!--
-      The table tag is used to create a table in html
-    -->
-      <table border="1" cellpadding="5" cellspacing="1">
-        <!--
-        The thead tag is used to group the header content in a table
+        The border attribute is used to specify the width of the border around the table
+        The cellspacing attribute is used to specify the space between the parts of the table
       -->
+      <table border="1" cellspacing="1">
         <thead>
-          <!--
-          The tr tag is used to define a row in a table
-        -->
-          <!--The th tag is used to define a header cell in a table-->
           <tr>
             <th>Channel Name</th>
             <th>Zach Cho</th>
@@ -129,9 +101,6 @@
             <th>Tzuyang</th>
           </tr>
         </thead>
-        <!--
-        The tbody tag is used to group the body content in a table
-      -->
         <tbody>
           <tr>
             <td>subscribers</td>
@@ -159,5 +128,11 @@
       src="images.html/OFCIB6o9dh8QgFQCzvjdErqbeJWWiVB0NcIaCPm8orp.webp"
       alt="eating"
       width="500px" />
+
+    <footer>
+      <p>Created by Omar K. &copy; 2026</p>
+      <p>Contact:</p>
+      <p>Don't!</p>
+    </footer>
   </body>
 </html>
