--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home - new webpage</title>
+    <title>Home | About Mukbangs</title>
   </head>
   <body>
     <!--
@@ -13,8 +13,10 @@
       <nav>
         <ul>
           <li>
-            <a href="survey.html">Survey</a>
             <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="survey.html">Survey</a>
           </li>
         </ul>
       </nav>
@@ -41,17 +43,17 @@
     <br />
     <img
       src="images.html/images.jpg"
-      alt="Mukbang Example"
+      alt="A Nikocado Avocado eating a large amount of food that is placed around them"
       width="500px" /><br />
     <!--
-    The section tag is used to define sections in a document, such as chapters,
-    headers, footers, or any other sections of the document
-  -->
+      The section tag is used to define sections in a document, such as chapters,
+      headers, footers, or any other sections of the document
+    -->
     <section>
       <h2>How it started out</h2>
       <p>
         Mukbangs started out as a South Korean live stream around 2009 and was
-        live-streaming on platforms like AfreecaTV, as a cultural response to
+        live-streaming on plat forms like AfreecaTV, as a cultural response to
         <br />
         loneliness and <b>changing eating habits in South Korea.</b>
       </p>
@@ -61,9 +63,10 @@
       <h2>How it rose to fame</h2>
       <p>
         Mukbangs gained popularity through social media influencers like
-        <mark
-          >Tzuyang, Hamzy, Nikocado Avocado, Bloveslife, and Trisha Paytas</mark
-        >, on YouTube,
+        <mark>
+          Tzuyang, Hamzy, Nikocado Avocado, Bloveslife, and Trisha Paytas
+        </mark>
+        , on YouTube,
         <br />
         where creators could reach a global audience. The combination of food,
         entertainment, and interaction made mukbangs a unique form of content
@@ -77,47 +80,45 @@
     <h2>Here is a video of a mukbang</h2>
     <!--
       The iframe tag is used to use some thing from another source in your website
+
+      Title needs to be more descriptive like alt in images.
     -->
     <iframe
       width="560"
       height="315"
       src="https://www.youtube.com/embed/q7JOrGYz8YE?si=ePbAJqpGfaCGCVs8"
-      title="mukbang video"
+      title="a mukbang video of DDM ASMR eating various types of food like fast food and desserts"
       frameborder="0"
       allowfullscreen></iframe>
 
     <section>
       <h2>A table of the most popular mukbang YouTubers</h2>
-      <!--
-        The border attribute is used to specify the width of the border around the table
-        The cellspacing attribute is used to specify the space between the parts of the table
-      -->
-      <table border="1" cellspacing="1">
-        <thead>
-          <tr>
-            <th>Channel Name</th>
-            <th>Zach Cho</th>
-            <th>Nikocado Avocado</th>
-            <th>Tzuyang</th>
-          </tr>
-        </thead>
+      <!-- Needs work. Need to put names of channels in first column of each row. -->
+      <table>
         <tbody>
           <tr>
-            <td>subscribers</td>
+            <th>Name</th>
+            <th>Subscribers</th>
+            <th>Videos</th>
+            <th>Total Views</th>
+          </tr>
+
+          <tr>
+            <td>Zach Cho</td>
             <td>29M</td>
-            <td>4.7M</td>
-            <td>12.9M</td>
-          </tr>
-          <tr>
-            <td>videos</td>
             <td>1.3k</td>
-            <td>799</td>
-            <td>1k</td>
+            <td>14b</td>
           </tr>
           <tr>
-            <td>views</td>
-            <td>14 billion</td>
-            <td>10 billion</td>
+            <td>Nikocado Avocado</td>
+            <td>4.7M</td>
+            <td>799</td>
+            <td>10b</td>
+          </tr>
+          <tr>
+            <td>Tzuyang</td>
+            <td>12.9M</td>
+            <td>1k</td>
             <td>unknown</td>
           </tr>
         </tbody>
@@ -126,7 +127,7 @@
     <br />
     <img
       src="images.html/OFCIB6o9dh8QgFQCzvjdErqbeJWWiVB0NcIaCPm8orp.webp"
-      alt="eating"
+      alt="A person surrounded by various types of fast food items, including burgers, fries, chicken nuggets, and tacos."
       width="500px" />
 
     <footer>
