--- a/survey.html
+++ b/survey.html
@@ -6,14 +6,16 @@
     <title>survey - new webpage</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-          <a href="survey.html">Survey</a>
-        </li>
-      </ul>
-    </nav>
+    <header>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="survey.html">Survey</a>
+          </li>
+        </ul>
+      </nav>
 
     <!--
       The fieldset tag is used to group related elements in a form
@@ -25,6 +27,7 @@
       <form method="get">
         <h1>Mukbang Survey</h1>
         <h2>This is a website about Mukbangs.</h2>
+    </header>
         <br />
         <!--
           The label tag is used to define a label for an input element
@@ -44,6 +47,7 @@
 
 
       <fieldset>
+        <legend>Mukbang</legend>
         <label for="mukbangs">What is a mukbang?</label>
         <br /><br />
         <input type="radio" id="eating" name="mukbangs1" value="Survey" />
@@ -78,7 +82,7 @@
 
         <img
           src="images.html/caseoh-eating-v0-2b67u2tzwfwd1.webp"
-          alt="some_one_eating"
+          alt="casoh eating pasta at a restaurant"
           width="500px" /><br /><br />
         <label for="some_one_eating">Who is this?</label><br />
         <input type="text" id="some_one_eating" name="some_one_eating" /><br />
